# golf.fuglar.com

./: README.md  app.py  config.py  db_initialize.py  manage.py  pyproject.toml  requirements.txt  runserver.py
app/: __init__.py  constants.py  decorators.py  logging.py  mail.py  models.py  oauth.py  views.py
app/static/css/: login.css  main.css
app/static/js/: base.js  golfcourse.js  stat.js
app/templates/: _base.html  _footer.html  _title.html  _topbar.html  admin.html  base.html  dashboard_stat.html  footer.html  index.html  menu_left.html  menu_top.html  modals.html  profile.html  statistics.html  title.html
app/templates/auth/: _base.html  base.html  login.html  register.html
app/templates/golfcourse/: _base.html  _sidebar.html  base.html  company.html  footer.html  index.html  menu_left.html
app/templates/login/: login.html  register.html
app/templates/main/: _base.html  _modals.html  _sidebar.html  company.html  index.html  profile.html  statistics.html
app/templates/main/admin/: password_reset.html
app/util/: assets.py
app/views/: admin.py  api.py  auth.py  general.py  golfcourse.py  main.py  views.py
instance/: secret_key
migrations/: 001script.sql
